--- a/src/components/login/login.sass
+++ b/src/components/login/login.sass
@@ -1,39 +1,62 @@
-body
-  padding-top: 40px
-  padding-bottom: 40px
-  background-color: #eee
+.form-signin,
+.form-signup
+  width: 350px
+  margin: 50px auto
 
 .form-signin,
 .form-signup
-  max-width: 330px
-  padding: 15px
-  margin: 0 auto
+  background-color: #e9ecee
+  padding: 30px
+  border-radius: 5px
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(50, 50, 50, 0.5)
+  -moz-box-shadow: 0px 0px 15px 0px rgba(50, 50, 50, 0.5)
+  box-shadow: 0px 0px 15px 0px rgba(50, 50, 50, 0.5)
 
-.form-signin .form-signin-heading,
-.form-signin .checkbox
-  margin-bottom: 10px
+  .form-signin-heading,
+    margin-bottom: 10px
+    color: #495a68
 
-.form-signin .checkbox
-  font-weight: normal
+  .form-signin-heading
+    margin: 0 0 20px 0
+    text-align: center
 
-.form-signin .form-control
-  position: relative
-  height: auto
-  -webkit-box-sizing: border-box
-     -moz-box-sizing: border-box
-          box-sizing: border-box
-  padding: 10px
-  font-size: 16px
+  input
+    background: #fff
+    border: 0px
+    padding: 12px
+    padding-left: 42px
+    margin: 0 0 15px 0
+    line-height: 24px
+    height: 44px
+    color: #8e9ba9
+    font-size: 14px
+    font-family: "PT Sans",sans-serif
+    -webkit-border-radius: 4px
+    -moz-border-radius: 4px
+    border-radius: 4px
+    -webkit-box-sizing: border-box
+    -moz-box-sizing: border-box
+    box-sizing: border-box
+    width: 100%
 
-.form-signin .form-control:focus
-  z-index: 2
+  .form-control
+    position: relative
+    height: auto
+    -webkit-box-sizing: border-box
+       -moz-box-sizing: border-box
+            box-sizing: border-box
+    padding: 10px
+    font-size: 16px
 
-.form-signin input[type="email"]
-  margin-bottom: -1px
-  border-bottom-right-radius: 0
-  border-bottom-left-radius: 0
+  .form-control:focus
+    z-index: 2
 
-.form-signin input[type="password"]
-  margin-bottom: 10px
-  border-top-left-radius: 0
-  border-top-right-radius: 0
+  .bottom-link
+    text-align: center
+    margin-top: 15px
+    font-weight: normal
+
+  .form-error-msg
+    text-align: center
+    color: red
+    margin-top: 5px
